Fixed data chart being too wide

--- a/src/components/History/history.css
+++ b/src/components/History/history.css
@@ -6,6 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width:25%;
+  margin: 0 auto;
 }
 
 .heading {
